--- a/public/views/accountView.html
+++ b/public/views/accountView.html
@@ -9,7 +9,7 @@
 					</md-input-container>
 					<md-input-container class="md-block" flex-gt-sm>
 						<label>Title</label>
-						<input ng-model="user.title" placeholder="CEO/Founder">
+						<input ng-model="user.jobTitle" placeholder="CEO/Founder">
 					</md-input-container>
 				</div>
 				<div layout-gt-sm="row">
@@ -54,12 +54,16 @@
 				</div>
 				<div layout-gt-sm="row">
 					<md-input-container class="md-block" flex-gt-sm>
-						<label>Twitter (Disabled)</label>
-						<input ng-model="user.twitter" disabled>
+						<label>Twitter</label>
+						<input ng-model="user.twitterHandle" >
 					</md-input-container>
 					<md-input-container class="md-block" flex-gt-sm>
-						<label >Facebook (Disabled)</label>
-						<input ng-model="user.twitter" disabled >
+						<label >Facebook Url</label>
+						<input ng-model="user.facebookUrl"  >
+					</md-input-container>
+					<md-input-container class="md-block" flex-gt-sm>
+						<label >LinkedIn Url</label>
+						<input ng-model="user.linkedInUrl"  >
 					</md-input-container>
 				</div>
 
