--- a/public/views/odCard.html
+++ b/public/views/odCard.html
@@ -34,16 +34,19 @@
 		<div class="vertical-line"></div>
 		<div layout="row" layout-gt-sm="column" layout-padding layout-align="center center">
 			<div class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{::user.html_url || user.profileUrl}}"><span class="fa fa-github-square"></span> </a>
+				<a ng-href="{{::user.html_url || user.profileUrl}}"><span class="fa fa-github"></span> </a>
 			</div>
 			<div ng-if="user.linkedInUrl" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{user.linkedInUrl}}"><span class="fa fa-linkedin-square"></span> </a>
+				<a ng-href="{{user.linkedInUrl}}"><span class="fa fa-linkedin"></span> </a>
 			</div>
 			<div ng-if="user.twitterHandle" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="https://twitter.com/{{user.twitterUrl}}"><span class="fa fa-twitter-square"></span> </a>
+				<a ng-href="https://twitter.com/{{user.twitterHandle}}"><span class="fa fa-twitter"></span> </a>
 			</div>
 			<div ng-if="user.facebookUrl" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{user.facebookUrl}}"><span class="fa fa-facebook-square"></span> </a>
+				<a ng-href="{{user.facebookUrl}}"><span class="fa fa-facebook"></span> </a>
+			</div>
+			<div class="contact-info" flex-gt-sm="10" >
+				<a ng-click="od.getCard(user)"><span class="fa fa-download"></span> </a>
 			</div>
 		</div>
 
