--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -39,9 +39,13 @@
 			<md-divider></md-divider>
 		</md-button>
 		
-		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-disabled="::true">
-			Share Link
+		<md-button ng-click="::toggleSidenav('right');toggleLink()" flex="100" ng-disabled="!client.isLoggedIn">
+			Share Profile
 		</md-button>
+		<md-input-container class="md-block" flex ng-if="linkBool">
+			<label>Link to Profile</label>
+			<input ng-model="link + client.login"  >
+		</md-input-container>
 	</md-list>
 
 	
