Triggering about page from sidenav

--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -56,13 +56,13 @@
 				Home
 			</md-button>
 		
-			<md-button ng-click="::toggleSidenav('right')" flex="100" ng-disabled="::true">
-				About Page
+			<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#about">
+				About OctoDex
 				<md-divider></md-divider>
 			</md-button>
 		
 			<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="https://github.com/lopezhansel/OctoDex" target="_blank">
-				OctoDex Github Page
+				Octodex Github Page
 			</md-button ng-click="::toggleSidenav('right')" >
 		</md-list>
 	</div>
