Small Bug fixes

--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -24,11 +24,14 @@
 </ul>
 <h2 id="todo-list">TODO List</h2>
 <ul>
+<li>[ ] add css to od-readme directive</li>
 <li>[ ] Let user know if profile is an octodex user or not</li>
 <li>[ ] Add Following tab to profile view</li>
 <li>[ ] BUG: If POST timeout css color wont change</li>
 <li>[ ] Fix: &quot;UPDATE PROFILE&quot; button showing up everywhere</li>
 <li>[ ] Show random OctoDex Users at home page.</li>
+<li>[x] clicking share profile closes page</li>
+<li>[x] repo page refactorU too slow</li>
 <li>[x] Add LinkedIn Facebook and Twiter options</li>
 <li>[x] add toggleSidenav when clicking on sidenav list item</li>
 <li>[x] Perfect Mobile layout of profileView</li>
@@ -40,7 +43,7 @@
 <li>[x] &quot;Sign In&quot; button doesn&#39;t update after logging in</li>
 <li>[x] Remove Full Profile Button</li>
 <li>[x] First Login Doesn&#39;t work</li>
-<li>[X] Fix Social Profiles Icon.</li>
+<li>[x] Fix Social Profiles Icon.</li>
 <li>[x] Show Octodex Users at home page</li>
 <li>[x] BUG : service.updateClient(); is being called by getOtherUsers</li>
 <li>[x] Making Server a bit more restful</li>
@@ -53,12 +56,12 @@
 <li>[x] improve service.getFollowersAndRepos.</li>
 <li>[x] Improve api calls retrieving Repos and Followers;</li>
 <li>[x] learn to implement $q or $resource service from angular</li>
-<li>[X] shareable link</li>
+<li>[x] shareable link</li>
 <li>[x] Inline directive not edit more when not in client profile</li>
-<li>[X] Fix Api to request more info from github</li>
-<li>[X] save user data into database</li>
-<li>[X] Show &#39;Done&#39; icon in inline directive</li>
-<li>[X] add a variable for $dirty </li>
+<li>[x] Fix Api to request more info from github</li>
+<li>[x] save user data into database</li>
+<li>[x] Show &#39;Done&#39; icon in inline directive</li>
+<li>[x] add a variable for $dirty </li>
 <li>[x] Revamp inline directive. Fix edit I&#39;mode in directive. Edit mode toggle button.</li>
 <li>[x] Enable &quot;Full Profile&quot; Button</li>
 <li>[x] Fixed other github users not being able to log in</li>
@@ -72,4 +75,12 @@
 <li>[x] Download vcf contact file</li>
 <li>[x] Convert ReadMe Markdown files to html</li>
 <li>[ ] Highlight Syntax</li>
+<li>[ ] </li>
+</ul>
+<h2 id="not-priority-ios">Not Priority iOS</h2>
+<ul>
+<li>[ ] home page/od-card not flexing</li>
+<li>[ ] Sidenav flex problem </li>
+<li>[ ] edit page padding at bottom</li>
+<li>[ ] about page flex layout-fill</li>
 </ul>
