--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -39,7 +39,7 @@
 			<md-divider></md-divider>
 		</md-button>
 		
-		<md-button ng-click="::toggleSidenav('right');toggleLink()" flex="100" ng-disabled="!client.isLoggedIn">
+		<md-button ng-click="::toggleLink()" flex="100" ng-disabled="!client.isLoggedIn">
 			Share Profile
 		</md-button>
 		<md-input-container class="md-block" flex ng-if="linkBool">
