--- a/public/views/odGroups.html
+++ b/public/views/odGroups.html
@@ -17,7 +17,7 @@
 		</md-card-title>
 		<md-card-actions layout="row" layout-align="end center">
 			<md-button ng-href="#profile/{{user.login}}">Visit Profile</md-button>
-			<md-button>Visit Repos</md-button>
+			<md-button disabled="true">Visit Repos</md-button>
 		</md-card-actions>
 	</md-card>
 </div>
