--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -54,6 +54,7 @@
 		<md-list layout layout-wrap>
 			<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#/">
 				Home
+				<md-divider></md-divider>
 			</md-button>
 		
 			<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#about">
