--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -24,10 +24,20 @@
 <li>[ ] add css to od-readme directive </li>
 <li>[ ] Let user know if profile is an octodex user or not </li>
 <li>[ ] Add &quot;Following&quot; tab to profile view </li>
+<li>[ ] Add Repo Project View</li>
+<li>[ ] Upload Image to Node server</li>
+<li>[ ] Add Organization/Group  View</li>
+<li>[ ] Use Ng-file Upload</li>
 <li>[ ] BUG: If POST timeout css color wont change </li>
 <li>[ ] Fix: &quot;UPDATE PROFILE&quot; button showing up everywhere </li>
 <li>[ ] Show random OctoDex Users at home page. </li>
-<li>[x] Add links to readme.md <a href="https://github.com/lopezhansel/OctoDex/commit/"></a></li>
+<li>[ ] Make jobTitle editable on od-Card </li>
+<li>[ ] Comment more code </li>
+<li>[ ] Make Server even more restful </li>
+<li>[ ] Save github response headers into mongo </li>
+<li>[x] Create and Download vcf contact file <a href="https://github.com/lopezhansel/OctoDex/commit/fbecb24">fbecb24</a> <a href="https://github.com/lopezhansel/OctoDex/commit/8fc3dfa">8fc3dfa</a></li>
+<li>[x] Convert ReadMe Markdown files to html <a href="https://github.com/lopezhansel/OctoDex/commit/c52ffd2">c52ffd2</a></li>
+<li>[x] Rewrite and add links to readme.md <a href="https://github.com/lopezhansel/OctoDex/commit/8b07647">8b07647</a></li>
 <li>[x] Adding about readme view trigger and route <a href="https://github.com/lopezhansel/OctoDex/commit/c6a8658">c6a8658</a> <a href="https://github.com/lopezhansel/OctoDex/commit/d1494c5">d1494c5</a></li>
 <li>[x] Allowing user to download vCard from users <a href="https://github.com/lopezhansel/OctoDex/commit/8fc3dfa">8fc3dfa</a> </li>
 <li>[x] Fix &quot;unable to import vCard&quot; data corruption <a href="https://github.com/lopezhansel/OctoDex/commit/f51fbb9">f51fbb9</a></li>
@@ -68,13 +78,7 @@
 <li>[x] add a variable for $dirty  <a href="https://github.com/lopezhansel/OctoDex/commit/1c3f58f">1c3f58f</a></li>
 <li>[x] Enable &quot;Full Profile&quot; Button <a href="https://github.com/lopezhansel/OctoDex/commit/ea1567c">ea1567c</a></li>
 <li>[x] Fixed other github users not being able to log in <a href="https://github.com/lopezhansel/OctoDex/commit/e9c1f9c">e9c1f9c</a> <a href="https://github.com/lopezhansel/OctoDex/commit/aaa36f9">aaa36f9</a><br><strong>Future Possibility</strong></li>
-<li>[ ] Upload Image to Node server</li>
-<li>[ ] Add Repo Project View</li>
-<li>[ ] Add Organization/Group  View</li>
-<li>[ ] Use Ng-file Upload</li>
-<li>[ ] Highlight Syntax</li>
-<li>[x] Create and Download vcf contact file <a href="https://github.com/lopezhansel/OctoDex/commit/fbecb24">fbecb24</a> <a href="https://github.com/lopezhansel/OctoDex/commit/8fc3dfa">8fc3dfa</a></li>
-<li>[x] Convert ReadMe Markdown files to html <a href="https://github.com/lopezhansel/OctoDex/commit/c52ffd2">c52ffd2</a><br><strong>Not a Priority</strong></li>
+<li>[ ] Highlight Syntax<br><strong>Not a Priority</strong></li>
 <li>[ ] home page/od-card not flexing (iOS safari)</li>
 <li>[ ] Sidenav flex problem  (iOS safari)</li>
 <li>[ ] edit page padding at bottom (iOS safari)</li>
