Adding Following Tab

--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -23,7 +23,6 @@
 <ul>
 <li>[ ] add css to od-readme directive </li>
 <li>[ ] Let user know if profile is an octodex user or not </li>
-<li>[ ] Add &quot;Following&quot; tab to profile view </li>
 <li>[ ] Add Repo Project View</li>
 <li>[ ] Upload Image to Node server</li>
 <li>[ ] Add Organization/Group  View</li>
@@ -35,6 +34,7 @@
 <li>[ ] Comment more code </li>
 <li>[ ] Make Server even more restful </li>
 <li>[ ] Save github response headers into mongo </li>
+<li>[x] Add &quot;Following&quot; tab to profile view </li>
 <li>[x] Create and Download vcf contact file <a href="https://github.com/lopezhansel/OctoDex/commit/fbecb24">fbecb24</a> <a href="https://github.com/lopezhansel/OctoDex/commit/8fc3dfa">8fc3dfa</a></li>
 <li>[x] Convert ReadMe Markdown files to html <a href="https://github.com/lopezhansel/OctoDex/commit/c52ffd2">c52ffd2</a></li>
 <li>[x] Rewrite and add links to readme.md <a href="https://github.com/lopezhansel/OctoDex/commit/8b07647">8b07647</a></li>
