--- a/public/views/profileView.html
+++ b/public/views/profileView.html
@@ -23,6 +23,11 @@
     class="card-background md-padding" ng-if="true">
     </md-content>
   </md-tab>
+  <md-tab label="Following">
+    <md-content od-following
+    class="card-background md-padding" ng-if="true">
+    </md-content>
+  </md-tab>
 
 </md-tabs>
 
