--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -33,7 +33,7 @@
 <li>[ ] Comment more code </li>
 <li>[ ] Make Server even more restful </li>
 <li>[ ] Save github response headers into mongo </li>
-<li>[x] Make jobTitle editable on od-Card </li>
+<li>[x] Make jobTitle editable on od-Card <a href="https://github.com/lopezhansel/OctoDex/commit/f0938c5">c0c1203</a> </li>
 <li>[x] Add &quot;Following&quot; tab to profile view <a href="https://github.com/lopezhansel/OctoDex/commit/f0938c5">f0938c5</a> </li>
 <li>[x] Create and Download vcf contact file <a href="https://github.com/lopezhansel/OctoDex/commit/fbecb24">fbecb24</a> <a href="https://github.com/lopezhansel/OctoDex/commit/8fc3dfa">8fc3dfa</a></li>
 <li>[x] Convert ReadMe Markdown files to html <a href="https://github.com/lopezhansel/OctoDex/commit/c52ffd2">c52ffd2</a></li>
