--- a/public/views/odCard.html
+++ b/public/views/odCard.html
@@ -1,64 +1,70 @@
 <md-card layout="column" class="my-container md-whiteframe-5dp" >
-	<div layout="column" layout-gt-xs="row"  class="card-header">
-		<div flex-xs="100" flex-sm="50" flex-gt-sm="33" >
-			<img  ng-src="{{::user.avatar_url}}" alt="profile picture"/>
-		</div>
-		<div layout="column" layout-padding layout-align="start start" flex="50">
-			<div>
-				<span flex inline value="user.name" key="name" class="md-display-2 display-name inline"></span>
-				<span flex class="md-display-1 display-name inline">({{user.login}})</span>
-			</div>
-			<span inline value="user.jobTitle" key="jobTitle" class="md-display-1 display-name">{{user.jobTitle || "Web Master"}} </span>
-			<div class="md-title" layout layout-wrap> 
-				<span flex-sm="100" flex-xs="100">{{user.public_repos }} <span class="md-subhead">Repos</span></span>
-				<span hide-sm hide-xs class="vertical-line"></span>
-				<span flex-sm="100" flex-xs="100">{{ user.followers }} <span class="md-subhead">Followers</span></span> 
-				<span   hide-sm hide-xs class="vertical-line"></span>
-				<span flex-sm="100" flex-xs="100">{{ user.following }} <span class="md-subhead">Following</span></span>
-			</div>
-		</div>
+	<div layout layout-align="center center" ng-if="!user">
+		<md-progress-circular md-mode="indeterminate" md-diameter="96"></md-progress-circular>
 	</div>
-
-	<div class="md-padding " layout="column" layout-gt-sm="row"   >
-		<div layout="column" flex="95" class="contact-info-wrap">
-			<div ng-class="{'md-title':$mdMedia('sm'), 'md-headline':$mdMedia('gt-sm') }">
-				<div inline value="user.phone" key="phone"></div>
-				<div inline value="user.blog" key="blog"></div>
-				<div inline value="user.company" key="company"></div>
-				<div inline value="user.email" key="email"></div>
-				<div inline value="user.hireable" key="hireable"></div>
-				<div inline value="user.location" key="location"></div>
+	<div ng-if="user">
+			
+		<div layout="column" layout-gt-xs="row"  class="card-header">
+			<div flex-xs="100" flex-sm="50" flex-gt-sm="33" >
+				<img  ng-src="{{::user.avatar_url}}" alt="profile picture"/>
+			</div>
+			<div layout="column" layout-padding layout-align="start start" flex="50">
+				<div>
+					<span flex inline value="user.name" key="name" class="md-display-2 display-name inline"></span>
+					<span flex class="md-display-1 display-name inline">({{user.login}})</span>
+				</div>
+				<span inline value="user.jobTitle" key="jobTitle" class="md-display-1 display-name">{{user.jobTitle || "Web Master"}} </span>
+				<div class="md-title" layout layout-wrap> 
+					<span flex-sm="100" flex-xs="100">{{user.public_repos }} <span class="md-subhead">Repos</span></span>
+					<span hide-sm hide-xs class="vertical-line"></span>
+					<span flex-sm="100" flex-xs="100">{{ user.followers }} <span class="md-subhead">Followers</span></span> 
+					<span   hide-sm hide-xs class="vertical-line"></span>
+					<span flex-sm="100" flex-xs="100">{{ user.following }} <span class="md-subhead">Following</span></span>
+				</div>
 			</div>
 		</div>
 
-		<div class="vertical-line"></div>
-		<div layout="row" layout-gt-sm="column" layout-padding layout-align="center center">
-			<div class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{::user.html_url || user.profileUrl}}"><span class="fa fa-github"></span> </a>
+		<div class="md-padding " layout="column" layout-gt-sm="row"   >
+			<div layout="column" flex="95" class="contact-info-wrap">
+				<div ng-class="{'md-title':$mdMedia('sm'), 'md-headline':$mdMedia('gt-sm') }">
+					<div inline value="user.phone" key="phone"></div>
+					<div inline value="user.blog" key="blog"></div>
+					<div inline value="user.company" key="company"></div>
+					<div inline value="user.email" key="email"></div>
+					<div inline value="user.hireable" key="hireable"></div>
+					<div inline value="user.location" key="location"></div>
+				</div>
 			</div>
-			<div ng-if="user.linkedInUrl" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{user.linkedInUrl}}"><span class="fa fa-linkedin"></span> </a>
+
+			<div class="vertical-line"></div>
+			<div layout="row" layout-gt-sm="column" layout-padding layout-align="center center">
+				<div class="contact-info" flex-gt-sm="10" >
+					<a ng-href="{{::user.html_url || user.profileUrl}}"><span class="fa fa-github"></span> </a>
+				</div>
+				<div ng-if="user.linkedInUrl" class="contact-info" flex-gt-sm="10" >
+					<a ng-href="{{user.linkedInUrl}}"><span class="fa fa-linkedin"></span> </a>
+				</div>
+				<div ng-if="user.twitterHandle" class="contact-info" flex-gt-sm="10" >
+					<a ng-href="https://twitter.com/{{user.twitterHandle}}"><span class="fa fa-twitter"></span> </a>
+				</div>
+				<div ng-if="user.facebookUrl" class="contact-info" flex-gt-sm="10" >
+					<a ng-href="{{user.facebookUrl}}"><span class="fa fa-facebook"></span> </a>
+				</div>
+				<div class="contact-info" flex-gt-sm="10" >
+					<a ng-click="od.getCard(user)"><span class="fa fa-download"></span> </a>
+				</div>
 			</div>
-			<div ng-if="user.twitterHandle" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="https://twitter.com/{{user.twitterHandle}}"><span class="fa fa-twitter"></span> </a>
-			</div>
-			<div ng-if="user.facebookUrl" class="contact-info" flex-gt-sm="10" >
-				<a ng-href="{{user.facebookUrl}}"><span class="fa fa-facebook"></span> </a>
-			</div>
-			<div class="contact-info" flex-gt-sm="10" >
-				<a ng-click="od.getCard(user)"><span class="fa fa-download"></span> </a>
-			</div>
+
 		</div>
 
+		<md-card-actions layout="row" layout-align="end center">
+			<span flex></span>
+			<md-button ng-show="octoService.showSaveBtn" 
+				class="md-warn md-raised" 
+				ng-click="octoService.updateClient()"
+				aria-label="save button">
+				Update Profile
+			</md-button>
+		</md-card-actions>
 	</div>
-
-	<md-card-actions layout="row" layout-align="end center">
-		<span flex></span>
-		<md-button ng-show="octoService.showSaveBtn" 
-			class="md-warn md-raised" 
-			ng-click="octoService.updateClient()"
-			aria-label="save button">
-			Update Profile
-		</md-button>
-	</md-card-actions>
 </md-card>
