--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -32,7 +32,8 @@
 <li>[ ] Show random OctoDex Users at home page. </li>
 <li>[ ] Comment more code </li>
 <li>[ ] Make Server even more restful </li>
-<li>[x] add loading animation when loading user in odCard directive</li>
+<li>[x] Fixed service.client.isLoggedIn getting overwritten <a href="https://github.com/lopezhansel/OctoDex/commit/"></a></li>
+<li>[x] add loading animation when loading user in odCard directive <a href="https://github.com/lopezhansel/OctoDex/commit/94eb646">94eb646</a></li>
 <li>[x] Save github response headers into mongo <a href="https://github.com/lopezhansel/OctoDex/commit/1d28b7c">1d28b7c</a> <a href="https://github.com/lopezhansel/OctoDex/commit/6981285">6981285</a> </li>
 <li>[x] Make jobTitle editable on od-Card <a href="https://github.com/lopezhansel/OctoDex/commit/1d28b7c">1d28b7c</a> </li>
 <li>[x] Add &quot;Following&quot; tab to profile view <a href="https://github.com/lopezhansel/OctoDex/commit/f0938c5">f0938c5</a> </li>
