--- a/public/views/odWelcome.html
+++ b/public/views/odWelcome.html
@@ -1,10 +1,10 @@
 <md-content 
   layout-padding layout="column" 
-  ng-if="!octoService.client.isLoggedIn &&  atHome"
+  
   layout-align="start center">
   <h1>Welcome to octoDex!</h1> 
   <h1>An online vitual profile for Github Users</h1> 
   <md-button class="md-raised md-primary" ng-click="logger()">
-    {{signInBtn}}
+    {{od.signInBtn}}
   </md-button>
 </md-content>
