--- a/public/views/odCard.html
+++ b/public/views/odCard.html
@@ -51,7 +51,7 @@
 					<a ng-href="{{user.facebookUrl}}"><span class="fa fa-facebook"></span> </a>
 				</div>
 				<div class="contact-info" flex-gt-sm="10" >
-					<a ng-click="od.getCard(user)"><span class="fa fa-download"></span> </a>
+					<a ng-click="user.getCard()"><span class="fa fa-download"></span> </a>
 				</div>
 			</div>
 
