--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -34,7 +34,7 @@
 			<md-divider></md-divider>
 		</md-button>
 		
-		<md-button ng-click="::toggleSidenav('right');od.getCard(od.client)" flex="100" ng-disabled="!od.client.isLoggedIn">
+		<md-button ng-click="::toggleSidenav('right');od.client.getCard()" flex="100" ng-disabled="!od.client.isLoggedIn">
 			Download Contact File
 			<md-divider></md-divider>
 		</md-button>
