--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -22,7 +22,6 @@
 <h2 id="to-do-list">To-Do List</h2>
 <ul>
 <li>[ ] add css to od-readme directive </li>
-<li>[ ] Let user know if profile is an octodex user or not </li>
 <li>[ ] Add Repo Project View</li>
 <li>[ ] Upload Image to Node server</li>
 <li>[ ] Add Organization/Group  View</li>
@@ -32,7 +31,8 @@
 <li>[ ] Show random OctoDex Users at home page. </li>
 <li>[ ] Comment more code </li>
 <li>[ ] Make Server even more restful </li>
-<li>[x] Fixed service.client.isLoggedIn getting overwritten <a href="https://github.com/lopezhansel/OctoDex/commit/"></a></li>
+<li>[x] Let user know if profile is an octodex user or not <a href="https://github.com/lopezhansel/OctoDex/commit/"></a></li>
+<li>[x] Fixed service.client.isLoggedIn getting overwritten <a href="https://github.com/lopezhansel/OctoDex/commit/f2a3bde">f2a3bde</a></li>
 <li>[x] add loading animation when loading user in odCard directive <a href="https://github.com/lopezhansel/OctoDex/commit/94eb646">94eb646</a></li>
 <li>[x] Save github response headers into mongo <a href="https://github.com/lopezhansel/OctoDex/commit/1d28b7c">1d28b7c</a> <a href="https://github.com/lopezhansel/OctoDex/commit/6981285">6981285</a> </li>
 <li>[x] Make jobTitle editable on od-Card <a href="https://github.com/lopezhansel/OctoDex/commit/1d28b7c">1d28b7c</a> </li>
