--- a/public/views/accountView.html
+++ b/public/views/accountView.html
@@ -47,10 +47,10 @@
 						<label >Website</label>
 						<input ng-model="user.blog" placeholder="https://SteveJobs.com">
 					</md-input-container>
-					<md-input-container class="md-block" flex-gt-sm>
+					<!-- <md-input-container class="md-block" flex-gt-sm>
 						<label>Avatar Picture Url</label>
 						<input ng-model="user.avatar_url">
-					</md-input-container>
+					</md-input-container> -->
 				</div>
 				<div layout-gt-sm="row">
 					<md-input-container class="md-block" flex-gt-sm>
@@ -75,7 +75,9 @@
 		</div>
 	</md-content>
 </div>
-
+<md-button class="md-raised md-primary" ngf-select="upload($files)" ngf-multiple="true" flex-gt-sm>
+	Upload a picture
+</md-button>
 <div layout-padding>
 	<md-button ng-show="userForm.$dirty" 
 		type="submit"
